# Rendara.ai

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  playwright.config.ts  skills-lock.json  vitest.config.ts
app/: globals.css  layout.tsx
backend/: __init__.py  config.json  config.py  database.py  main.py  mcp_servers.json  models.py  pyproject.toml  requirements.txt  seed_demo_data.py  seed_singtel_data.py
backend/db/: init_db.py  schema.sql
backend/prompts/: system_prompt.py
backend/routers/: chat.py  conversations.py  dashboards.py  pinned.py  reports.py  stories.py
backend/services/: mcp_client.py  openrouter.py  sql_tools.py  stream_processor.py
backend/tests/: conftest.py  test_api_contracts.py  test_config.py  test_database.py  test_resource_context.py  test_sse_stream.py  test_update_tools.py
docs/: Rendara_BRD.md  Rendara_Dashboard_Story_Redesign.md  Rendara_SDD.md  UI Detailed Design.md  architecture-qa.md  reports-test-plan.md  test-plan-rich-content.md  test-results-consolidated.md  test-strategy.md
e2e/: agent-chat-panel.spec.ts  chart-viz.spec.ts  chat-flow.spec.ts  dashboard-canvas.spec.ts  dashboard-editing.spec.ts  dashboard-rich-content.spec.ts  dashboard.spec.ts  demo-flow.spec.ts  full-flow.spec.ts  llm-tool-calls.spec.ts  nav-redesign.spec.ts  pin-from-message.spec.ts  pinned-responses.spec.ts  readme-dash-detail.spec.ts  readme-screenshots.spec.ts  regression-full.spec.ts  report.spec.ts  smoke-test.spec.ts  stories.spec.ts  story-editing.spec.ts  story-rich-content.spec.ts  visual-pages.spec.ts  (+1 more)
(+122 files in other folders)
